--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
             <button class="btn btn-primary btn-block" name="ingresar"><i class="fa fa-sign-in fa-lg fa-fw"></i>SIGN IN</button>
           </div>
         </form>
-        <form class="forget-form" action="Private/registrarUsuariobd.php" method="POST">
+        <form class="forget-form" action="registrarUsuariobd.php" method="POST">
           <h3 class="login-head"><i class="fa fa-lg fa-fw fa-lock"></i>Registro</h3>
           <div class="form-group">
             <label class="control-label">Nombre</label>
