--- a/Public/index.html
+++ b/Public/index.html
@@ -54,7 +54,7 @@
 						<li><a href="galeria.html">Instituciones</a></li>
 					</ul>
 				</li>
-				<li><a href="login.html">Login<span></span></a></li>
+				<li><a href="IUsuario.php">Ajustes<span></span></a></li>
 			</ul>
 			<!-- 
 			<div class="header-right">
