Agregando modelo tabla Parques, visualizacion de datos

--- a/Private/home.html
+++ b/Private/home.html
@@ -69,7 +69,7 @@
             <li><a class="treeview-item" href="Registro.html" target="_blank" rel="noopener"><i class="icon fa fa-home"></i> Centros Culturales </a></li>
             <li><a class="treeview-item" href="tablaUsuarios.php"><i class="icon fa fa-film"></i> Cines </a></li>
             <li><a class="treeview-item" href="Registro.html" target="_blank" rel="noopener"><i class="icon fa fa-circle-o"></i> Plazas </a></li>
-            <li><a class="treeview-item" href="Parques.html"><i class="icon fa fa-tree"></i> Parques </a></li>
+            <li><a class="treeview-item" href="data-table-Parques.html"><i class="icon fa fa-tree"></i> Parques </a></li>
           </ul>
         </li>
         <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i class="app-menu__icon fa fa-list"></i><span class="app-menu__label">Sitio Turistico</span><i class="treeview-indicator fa fa-angle-right"></i></a>
