Agregando barra de navegacion

--- a/Private/home.html
+++ b/Private/home.html
@@ -81,11 +81,12 @@
         <li><a class="app-menu__item" href="docs.html"><i class="app-menu__icon fa fa-cutlery"></i><span class="app-menu__label">Restaurantes</span></a></li>
         <li><a class="app-menu__item" href="docs.html"><i class="app-menu__icon fa fa-university"></i><span class="app-menu__label">Universidades</span></a></li>
         <li><a class="app-menu__item" href="docs.html"><i class="app-menu__icon fa fa-briefcase"></i><span class="app-menu__label">Instituciones</span></a></li>
+        <li><a class="app-menu__item" href="Eventos.php"><i class="app-menu__icon fa fa-calendar"></i><span class="app-menu__label">Eventos</span></a></li>
       </ul>
     </aside>
     <main class="app-content">
       <div class="row">
-
+        
       </div>
       <div class="row">
 
