--- a/Private/Lugares.html
+++ b/Private/Lugares.html
@@ -1,4 +1,3 @@
-<?php include'config.php'; ?>
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -14,7 +13,7 @@
     <meta property="og:url" content="http://pratikborsadiya.in/blog/vali-admin">
     <meta property="og:image" content="http://pratikborsadiya.in/blog/vali-admin/hero-social.png">
     <meta property="og:description" content="Vali is a responsive and free admin theme built with Bootstrap 4, SASS and PUG.js. It's fully customizable and modular.">
-    <title>Lugares</title>
+    <title>Form Samples - Vali Admin</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -22,18 +21,6 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <!-- Font-icon css-->
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCP3eTt6XMGq757Iu0ZBK-eEeEAEQZRGJ4&callback=initMap&libraries=&v=weekly">  
-    </script>
-    <style type="text/css">
-      /* Set the size of the div element that contains the map */
-      #map {
-        height: 350px;
-        /* The height is 400 pixels */
-        width: 100%;
-        /* The width is the width of the web page */
-      }
-    </style>
   </head>
   <body class="app sidebar-mini">
     <!-- Navbar-->
@@ -71,46 +58,49 @@
             <li><a class="treeview-item" href="data-table-Usuario.php"><i class="icon fa fa-users"></i></i> Usuarios </a></li>
           </ul>
         </li>
+        <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i class="app-menu__icon fa fa-list"></i><span class="app-menu__label">Control de Lugares</span><i class="treeview-indicator fa fa-angle-right"></i></a>
+          <ul class="treeview-menu">
+            <li><a class="treeview-item" href="Lugares.html"><i class="icon fa fa-location-arrow"></i></i> Registro Lugares </a></li>
+          </ul>
+        </li>
         <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i class="app-menu__icon fa fa-list"></i></i><span class="app-menu__label">Atractivo Turistico</span><i class="treeview-indicator fa fa-angle-right"></i></a>
           <ul class="treeview-menu">
-            <li><a class="treeview-item" href="data-table-Balneario.php"><i class="icon fa fa-shower"></i> Balnearios </a></li>
-            <li><a class="treeview-item" href="data-table-CentroCultural.php" rel="noopener"><i class="icon fa fa-home"></i> Centros Culturales </a></li>
-            <li><a class="treeview-item" href="data-table-Cine.php"><i class="icon fa fa-film"></i> Cines </a></li>
-            <li><a class="treeview-item" href="data-table-Plaza.php" rel="noopener"><i class="icon fa fa-circle-o"></i> Plazas </a></li>
-            <li><a class="treeview-item" href="data-table-Parques.php"><i class="icon fa fa-tree"></i> Parques </a></li>
+            <li><a class="treeview-item" href="Balnearios.html"><i class="icon fa fa-shower"></i> Balnearios </a></li>
+            <li><a class="treeview-item" href="CentroCultural.html" rel="noopener"><i class="icon fa fa-home"></i> Centros Culturales </a></li>
+            <li><a class="treeview-item" href="Cines.html"><i class="icon fa fa-film"></i> Cines </a></li>
+            <li><a class="treeview-item" href="Plazas.html" rel="noopener"><i class="icon fa fa-circle-o"></i> Plazas </a></li>
+            <li><a class="treeview-item" href="Parques.html"><i class="icon fa fa-tree"></i> Parques </a></li>
           </ul>
         </li>
         <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i class="app-menu__icon fa fa-list"></i><span class="app-menu__label">Sitio Turistico</span><i class="treeview-indicator fa fa-angle-right"></i></a>
           <ul class="treeview-menu">
-            <li><a class="treeview-item" href="data-table-Iglesia.php"><i class="icon fas fa-church"></i> Iglesias </a></li>
-            <li><a class="treeview-item" href="data-table-Museo.php" rel="noopener"><i class="icon fa fa-building-o"></i> Museos </a></li>
+            <li><a class="treeview-item" href="Iglesias.html"><i class="icon fas fa-church"></i> Iglesias </a></li>
+            <li><a class="treeview-item" href="Museos.html" rel="noopener"><i class="icon fa fa-building-o"></i> Museos </a></li>
           </ul>
         </li>
-        <li><a class="app-menu__item" href="data-table-Restaurante.php"><i class="app-menu__icon fa fa-cutlery"></i><span class="app-menu__label">Restaurantes</span></a></li>
-        <li><a class="app-menu__item" href="data-table-Universidad.php"><i class="app-menu__icon fa fa-university"></i><span class="app-menu__label">Universidades</span></a></li>
-        <li><a class="app-menu__item" href="data-table-Institucion.php"><i class="app-menu__icon fa fa-briefcase"></i><span class="app-menu__label">Instituciones</span></a></li>
-        <li><a class="app-menu__item" href="Eventos.php"><i class="app-menu__icon fa fa-calendar"></i><span class="app-menu__label">Eventos</span></a></li>
-      </ul>
+        <li><a class="app-menu__item" href="Restaurantes.html"><i class="app-menu__icon fa fa-cutlery"></i><span class="app-menu__label">Restaurantes</span></a></li>
+        <li><a class="app-menu__item" href="Universidades.html"><i class="app-menu__icon fa fa-university"></i><span class="app-menu__label">Universidades</span></a></li>
+        <li><a class="app-menu__item" href="Instituciones.html"><i class="app-menu__icon fa fa-briefcase"></i><span class="app-menu__label">Instituciones</span></a></li>
     </aside>
     <main class="app-content">
       <div class="app-title">
-        <div class="col-lg-12">
-            <div class="bs-component">
-              <ul class="nav nav-tabs">
-                <li class="nav-item"><a class="nav-link"  href="home.html">Pagina Principal</a></li>
-                <li class="nav-item"><a class="nav-link "  href="data-table-CentroCultural.php">Tabla</a></li>
-                <li class="nav-item"><a class="nav-link active"  href="CentroCultural.php">Registro</a></li>
-              </ul>
-            </div>
-          </div>
+        <div>
+          <h1><i class="fa fa-edit"></i> Lugares</h1>
+          <p>Registro</p>
+        </div>
+        <ul class="app-breadcrumb breadcrumb">
+          <li class="breadcrumb-item"><i class="fa fa-home fa-lg"></i></li>
+          <li class="breadcrumb-item">registro</li>
+          <li class="breadcrumb-item"><a href="#">Lugar</a></li>
+        </ul>
       </div>
       <div class="row">
         <div class="col-md-8">
           <div class="tile">
             <div class="tile-body">
-              <form class="for-balneario" action="registrarLugarbd.php" method="POST">
+              <form class="for-balneario" action="registrarLugarbd.php">
                 <div class="form-group">
-                  <label class="control-label">Nombre del Centro Cultural</label>
+                  <label class="control-label">Nombre del Lugar</label>
                   <input class="form-control" name="nombreLugar" type="text" placeholder="Ingrese el nombre del Lugar">
                 </div>
                 <div class="form-group">
@@ -131,29 +121,30 @@
                   <div class="col-md-6">
                     <div class="form-group">
                       <label class="control-label">Precio Entrada</label>
-                      <input class="form-control" name="entrada" type="text" placeholder="Ingrese el Precio de la Entrada">
+                      <input class="form-control" name="entrada" type="text" placeholder="Ingrese el Horario">
                     </div>
                   </div>
                 </div>
-
+                <div class="form-group">
+                  <label class="control-label">Foto</label>
+                  <input class="form-control" name="foto" type="file">
+                </div>
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group">
-                      <label class="control-label">Foto</label>
-                      <input class="form-control" name="foto" type="file">
+                      <label for="exampleSelect1">Estado</label>
+                      <select class="form-control" id="exampleSelect1">
+                        <option>Activo</option>
+                        <option>Inactivo</option>
+                      </select>
                     </div>
                   </div>
                   <div class="col-md-6">
                     <div class="form-group">
                       <label for="exampleSelect1">Categoria</label>
-                      <select class="form-control" id="exampleSelect1" name="categoria">
-                        
-                        <?php
-                          $query = $mysqli -> query ("SELECT * FROM Categoria WHERE idCategoria='7'");
-                          while ($valores = mysqli_fetch_array($query)) {
-                          echo '<option value="'.$valores[idCategoria].'">'.$valores[nombreCategoria].'</option>';
-                          }
-                        ?>
+                      <select class="form-control" id="exampleSelect1">
+                        <option>Activo</option>
+                        <option>Inactivo</option>
                       </select>
                     </div>
                   </div>
@@ -162,31 +153,28 @@
                 <div class="form-group">
                   <label class="control-label">Mapa</label>
                   <br>
-                  <div id="map">
-
-                  </div>
-
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d30458.427377620897!2d-66.1459570801025!3d-17.39722040005723!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sbo!4v1605640227160!5m2!1ses!2sbo" width="100%" height="350" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                   <div class="row">
                     <div class="col-md-6">
                       <label class="control-label">Latitud</label>
-                      <input class="form-control" name="latitud" type="text" placeholder="Ingrese la Latitud" id="txtLat">
+                      <input class="form-control" name="latitud" type="text" placeholder="Ingrese la Latitud">
                     </div>
                     <div class="col-md-6">
                       <label class="control-label">Logitud</label>
-                      <input class="form-control" name="longitud" type="text" placeholder="Ingrese la Logitud" id="txtLng">
+                      <input class="form-control" name="longitud" type="text" placeholder="Ingrese la Logitud">
                     </div>
                   </div>
                 </div>
                 <div class="form-group">
                   <label for="exampleTextarea">Reseña Historica</label>
-                  <textarea class="form-control" id="exampleTextarea" rows="5" name="reseña"></textarea>
+                  <textarea class="form-control" id="exampleTextarea" rows="5"></textarea>
                 </div>
                 <div class="form-group">
                 </div>
-                <div class="tile-footer" align=center>
-                  <button class="btn btn-primary" type="submit"><i class="fa fa-fw fa-lg fa-check-circle"></i>Agregar</button>&nbsp;&nbsp;&nbsp;<a class="btn btn-secondary" href="#"><i class="fa fa-fw fa-lg fa-times-circle"></i>Cancelar</a>
-                </div>
               </form>
+            </div>
+            <div class="tile-footer" align=center>
+              <button class="btn btn-primary" type="button"><i class="fa fa-fw fa-lg fa-check-circle"></i>Agregar</button>&nbsp;&nbsp;&nbsp;<a class="btn btn-secondary" href="#"><i class="fa fa-fw fa-lg fa-times-circle"></i>Cancelar</a>
             </div>
           </div>
         </div>
@@ -212,50 +200,5 @@
       	ga('send', 'pageview');
       }
     </script>
-    <!-- mapas recuperacion de datos-->
-    <script type="text/javascript" src=https://maps.googleapis.com/maps/api/js?key=AIzaSyCP3eTt6XMGq757Iu0ZBK-eEeEAEQZRGJ4&callback=initMap&libraries=&v=weekly></script>
-    <script>
-        var vMarker
-        var map
-            map = new google.maps.Map(document.getElementById('map'), {
-                zoom: 13,
-                center: new google.maps.LatLng(-17.39722040005723, -66.1459570801025),
-                mapTypeId: google.maps.MapTypeId.ROADMAP
-            });
-            vMarker = new google.maps.Marker({
-                position: new google.maps.LatLng(-17.39722040005723, -66.1459570801025),
-                draggable: true
-            });
-            google.maps.event.addListener(vMarker, 'dragend', function (evt) {
-                $("#txtLat").val(evt.latLng.lat().toFixed(6));
-                $("#txtLng").val(evt.latLng.lng().toFixed(6));
-
-                map.panTo(evt.latLng);
-            });
-            map.setCenter(vMarker.position);
-            vMarker.setMap(map);
-
-            $("#txtCiudad, #txtEstado, #txtDireccion").change(function () {
-                movePin();
-            });
-
-            function movePin() {
-            var geocoder = new google.maps.Geocoder();
-            var textSelectM = $("#txtCiudad").text();
-            var textSelectE = $("#txtEstado").val();
-            var inputAddress = $("#txtDireccion").val() + ' ' + textSelectM + ' ' + textSelectE;
-            geocoder.geocode({
-                "address": inputAddress
-            }, function (results, status) {
-                if (status == google.maps.GeocoderStatus.OK) {
-                    vMarker.setPosition(new google.maps.LatLng(results[0].geometry.location.lat(), results[0].geometry.location.lng()));
-                    map.panTo(new google.maps.LatLng(results[0].geometry.location.lat(), results[0].geometry.location.lng()));
-                    $("#txtLat").val(results[0].geometry.location.lat());
-                    $("#txtLng").val(results[0].geometry.location.lng());
-                }
-
-            });
-        }
-        </script>
   </body>
 </html>
