--- a/Public/experiencias.html
+++ b/Public/experiencias.html
@@ -84,15 +84,23 @@
             <div class="text-center text-white mb-5 pb-2">
                 <h2>Opinión de los clientes</h2>
             </div>
+
             <div class="row">
                 <div class="col-lg-3 col-sm-6">
                     <div class="review-item">
                         <div class="rating">
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
+                            <p class="clasificacion">
+  								<input id="radio1" type="radio" name="estrellas" value="5">
+  								<label for="radio1"><i class="fa fa-star"></i></label>
+  								<input id="radio2" type="radio" name="estrellas" value="4">
+  								<label for="radio2">★</label>
+  								<input id="radio3" type="radio" name="estrellas" value="3">
+  								<label for="radio3">★</label>
+  								<input id="radio4" type="radio" name="estrellas" value="2">
+  								<label for="radio4">★</label>
+  								<input id="radio5" type="radio" name="estrellas" value="1">
+  								<label for="radio5">★</label>
+							</p>		
                         </div>
                         <p>Me gusta. Me gusta la aplicación por lo completa que es, pero para los extranjeros que estamos por ir a conocer esa ciudad tendría que tener la opción offlinea.</p>
                         <h6>Juan Pablo Sanchez, <span>15 min atrás</span></h6>
@@ -163,58 +171,6 @@
 			<a href="index.html" class="footer-logo">
 				<img src="img/logoBC.png" alt="">
 			</a>
-			<div class="row">
-				<div class="col-lg-3 col-sm-6">
-					<div class="footer-widget">
-						<h2>What we do</h2>
-						<ul>
-							<li><a href="#">Loans</a></li>
-							<li><a href="#">Car loans</a></li>
-							<li><a href="#">Debt consolidation loans</a></li>
-							<li><a href="#">Home improvement loans</a></li>
-							<li><a href="#"> Wedding loans</a></li>
-							<li><a href="#">Innovative Finance ISA</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-lg-3 col-sm-6">
-					<div class="footer-widget">
-						<h2>About us</h2>
-						<ul>
-							<li><a href="#">About us</a></li>
-							<li><a href="#">Our story</a></li>
-							<li><a href="#">Meet the board</a></li>
-							<li><a href="#">Meet the leadership team</a></li>
-							<li><a href="#">Awards</a></li>
-							<li><a href="#">Careers</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-lg-3 col-sm-6">
-					<div class="footer-widget">
-						<h2>Legal</h2>
-						<ul>
-							<li><a href="#">Privacy policy</a></li>
-							<li><a href="#">Loans2go principles</a></li>
-							<li><a href="#">Website terms</a></li>
-							<li><a href="#">Cookie policy</a></li>
-							<li><a href="#">Conflicts policy</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-lg-3 col-sm-6">
-					<div class="footer-widget">
-						<h2>Site Info</h2>
-						<ul>
-							<li><a href="#">Support</a></li>
-							<li><a href="#">FAQ</a></li>
-							<li><a href="#">Sitemap</a></li>
-							<li><a href="#">Careers</a></li>
-							<li><a href="#">Contact us</a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
 			<div class="social-links">
 				<a href="#"><i class="fab fa-facebook-f"></i></a>
 				<a href="#"><i class="fab fa-instagram"></i></a>
